<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg1e"
    tools:context=".forgotpass_page">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_dorah_s_designs"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_custom_made_outfits_seamless_alterations_and_expert_tailoring_services_at_your_fingertips_let_s_bring_your_fashion_ideas_to_life"
                android:textColor="@color/black"
                android:padding="5dp"/>

            <Button
                android:id="@+id/getstarednbtn"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/get_started"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="20dp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>