<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1e"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".ChangePasswordActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="30dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_key_24"
                android:padding="5dp"


                />
            <TextView
                android:id="@+id/resetpasstxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:text="@string/reset_your_password"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/resetpasswordtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/enter_your_new_password_and_confirm_it_to_reset_your_password"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/newpass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/dark_blue"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:padding="10dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="12dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/dark_blue" />


            <Button
                android:id="@+id/loginbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/black"
                android:text="@string/save_password"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="20dp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>